# femib-ng

./: CMakeLists.txt  Makefile  make_plot  make_plot_stokes  parallel  plot.plot  plot.plot.parallel  sonar-project.properties
CMakeModules/: CodeCoverage.cmake  FindTBB.cmake
bench/: CMakeLists.txt  affine_bench.cpp  cuda_bench.cpp  gauss_bench.cpp
doctest/: CMakeLists.txt  test.cpp
lib/: mini-book.h
plot/: plotSimulation.py
src/: main.cpp
src/affine/: CMakeLists.txt  affine.cpp  affine.hpp
src/cuda/: CMakeLists.txt  cuda.cu  cuda.h  mini-book.h
src/femib/: femib.hpp  poisson.hpp  stokes.hpp  stokes_t.hpp
src/finite_element/: CMakeLists.txt  P0_2d1d.hpp  P1+B_2d2d.hpp  P1_2d1d.hpp  P1_2d2d.hpp  finite_element.hpp
src/finite_element_space/: CMakeLists.txt  finite_element_space.hpp
src/gauss/: CMakeLists.txt  gauss.cpp  gauss.hpp  gauss_lagrange_2_2d.hpp
src/mesh/: CMakeLists.txt  mesh.cpp  mesh.hpp  read.cpp  read.hpp
src/mongo/: CMakeLists.txt  mongo.cpp  mongo.hpp
src/read/: CMakeLists.txt  read.cpp  read.hpp
src/types/: CMakeLists.txt  diff_oper.back  differential_operation.hpp  iterator_tpl.h  types.hpp
test/: CMakeLists.txt  affine_test.cpp  cuda_test.cpp  femib_test.cpp  finite_element_space_test.cpp  finite_element_test.cpp  gauss_test.cpp  mesh_test.cpp  mongo_test.cpp  stokes_t_test.cpp  stokes_test.cpp  test.cpp  types_test.cpp
