find_package (spdlog REQUIRED)
find_package (doctest REQUIRED)
find_package (TBB REQUIRED)
find_package (Eigen3 3.3 REQUIRED NO_MODULE)

add_custom_target (check COMMAND ${CMAKE_CTEST_COMMAND} DEPENDS affine_test cuda_test gauss_test types_test mesh_test finite_element_test finite_element_space_test femib_test)

include_directories (../src/affine)
add_executable (affine_test affine_test.cpp)
target_compile_features (affine_test PRIVATE cxx_std_17)
target_link_libraries (affine_test spdlog::spdlog Eigen3::Eigen doctest::doctest)
add_test (NAME affine_test COMMAND affine_test)

include_directories (../src/cuda)
add_executable (cuda_test cuda_test.cpp)
target_compile_definitions(cuda_test PRIVATE MESH_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../mesh/")
target_compile_features (cuda_test PRIVATE cxx_std_17)
target_link_libraries (cuda_test cuda read spdlog::spdlog Eigen3::Eigen doctest::doctest)
add_test (NAME cuda_test COMMAND cuda_test)

include_directories (../src/gauss)
add_executable (gauss_test gauss_test.cpp)
target_compile_features (gauss_test PRIVATE cxx_std_17)
target_link_libraries (gauss_test TBB::tbb spdlog::spdlog Eigen3::Eigen doctest::doctest)
add_test (NAME gauss_test COMMAND gauss_test)

include_directories (../src/types)
add_executable (types_test types_test.cpp)
target_compile_features (types_test PRIVATE cxx_std_17)
target_link_libraries (types_test spdlog::spdlog Eigen3::Eigen doctest::doctest)
add_test (NAME types_test COMMAND types_test)

include_directories (../src/mesh)
add_executable (mesh_test mesh_test.cpp)
target_compile_definitions(mesh_test PRIVATE MESH_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../mesh/")
target_compile_features (mesh_test PRIVATE cxx_std_17)
target_link_libraries (mesh_test read spdlog::spdlog TBB::tbb doctest::doctest)
add_test (NAME mesh_test COMMAND mesh_test)

include_directories (../src/finite_element)
add_executable (finite_element_test finite_element_test.cpp)
target_compile_features (finite_element_test PRIVATE cxx_std_17)
target_link_libraries (finite_element_test read spdlog::spdlog Eigen3::Eigen  doctest::doctest)
add_test (NAME finite_element_test COMMAND finite_element_test)

include_directories (../src/finite_element_space)
add_executable (finite_element_space_test finite_element_space_test.cpp)
target_compile_definitions(finite_element_space_test PRIVATE MESH_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../mesh/")
target_compile_features (finite_element_space_test PRIVATE cxx_std_17)
target_link_libraries (finite_element_space_test read spdlog::spdlog Eigen3::Eigen TBB::tbb doctest::doctest)
add_test (NAME finite_element_space_test COMMAND finite_element_space_test)

include_directories (../src/femib)
add_executable (femib_test femib_test.cpp)
target_compile_definitions(femib_test PRIVATE MESH_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../mesh/")
target_compile_features (femib_test PRIVATE cxx_std_17)
target_link_libraries (femib_test read spdlog::spdlog Eigen3::Eigen TBB::tbb  doctest::doctest)
add_test (NAME femib_test COMMAND femib_test)

include_directories (../src/femib)
add_executable (stokes_test stokes_t_test.cpp)
target_compile_definitions(stokes_test PRIVATE MESH_DIR="${CMAKE_CURRENT_SOURCE_DIR}/../mesh/")
target_compile_features (stokes_test PRIVATE cxx_std_17)
target_link_libraries (stokes_test read spdlog::spdlog Eigen3::Eigen TBB::tbb  doctest::doctest)
add_test (NAME stokes_test COMMAND stokes_test)
